_build/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On CLASS shift to state 1
-- On program shift to state 88
-- On main_class shift to state 89
## Reductions:

State 1:
## Known stack suffix:
## CLASS
## LR(1) items:
main_class -> CLASS . IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## CLASS IDENT
## LR(1) items:
main_class -> CLASS IDENT . LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LBRACE shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## CLASS IDENT LBRACE
## LR(1) items:
main_class -> CLASS IDENT LBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On PUBLIC shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On STATIC shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On VOID shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On MAIN shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LPAREN shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On STRING shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LBRACKET shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On RBRACKET shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . IDENT RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On IDENT shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT . RPAREN LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On RPAREN shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN . LBRACE statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LBRACE shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE . statement RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On WHILE shift to state 15
-- On SYSOU shift to state 57
-- On LBRACE shift to state 62
-- On IF shift to state 63
-- On IDENT shift to state 67
-- On statement shift to state 85
## Reductions:

State 15:
## Known stack suffix:
## WHILE
## LR(1) items:
statement -> WHILE . LPAREN expression RPAREN statement [ WHILE SYSOU RETURN RBRACE LBRACE IF IDENT ELSE ]
## Transitions:
-- On LPAREN shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## WHILE LPAREN
## LR(1) items:
statement -> WHILE LPAREN . expression RPAREN statement [ WHILE SYSOU RETURN RBRACE LBRACE IF IDENT ELSE ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 55
## Reductions:

State 17:
## Known stack suffix:
## THIS
## LR(1) items:
raw_expression -> THIS . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> THIS

State 18:
## Known stack suffix:
## NOT
## LR(1) items:
raw_expression -> NOT . expression [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 54
## Reductions:

State 19:
## Known stack suffix:
## NEW
## LR(1) items:
raw_expression -> NEW . INTEGER LBRACKET expression RBRACKET [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> NEW . IDENT LPAREN RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On INTEGER shift to state 20
-- On IDENT shift to state 51
## Reductions:

State 20:
## Known stack suffix:
## NEW INTEGER
## LR(1) items:
raw_expression -> NEW INTEGER . LBRACKET expression RBRACKET [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On LBRACKET shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## NEW INTEGER LBRACKET
## LR(1) items:
raw_expression -> NEW INTEGER LBRACKET . expression RBRACKET [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 49
## Reductions:

State 22:
## Known stack suffix:
## LPAREN
## LR(1) items:
expression -> LPAREN . expression RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 27
## Reductions:

State 23:
## Known stack suffix:
## INT_CONST
## LR(1) items:
raw_expression -> INT_CONST . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> INT_CONST

State 24:
## Known stack suffix:
## IDENT
## LR(1) items:
raw_expression -> IDENT . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> IDENT

State 25:
## Known stack suffix:
## BOOL_CONST
## LR(1) items:
raw_expression -> BOOL_CONST . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> BOOL_CONST

State 26:
## Known stack suffix:
## raw_expression
## LR(1) items:
expression -> raw_expression . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production expression -> raw_expression

State 27:
## Known stack suffix:
## LPAREN expression
## LR(1) items:
expression -> LPAREN expression . RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . binop expression [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT LENGTH [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
## Transitions:
-- On RPAREN shift to state 28
-- On PLUS shift to state 29
-- On MULTIPLY shift to state 30
-- On MINUS shift to state 31
-- On LT shift to state 32
-- On LBRACKET shift to state 33
-- On DOT shift to state 36
-- On AND shift to state 46
-- On binop shift to state 47
## Reductions:

State 28:
## Known stack suffix:
## LPAREN expression RPAREN
## LR(1) items:
expression -> LPAREN expression RPAREN . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production expression -> LPAREN expression RPAREN

State 29:
## Known stack suffix:
## PLUS
## LR(1) items:
binop -> PLUS . [ THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST ]
## Transitions:
## Reductions:
-- On THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST
--   reduce production binop -> PLUS

State 30:
## Known stack suffix:
## MULTIPLY
## LR(1) items:
binop -> MULTIPLY . [ THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST ]
## Transitions:
## Reductions:
-- On THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST
--   reduce production binop -> MULTIPLY

State 31:
## Known stack suffix:
## MINUS
## LR(1) items:
binop -> MINUS . [ THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST ]
## Transitions:
## Reductions:
-- On THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST
--   reduce production binop -> MINUS

State 32:
## Known stack suffix:
## LT
## LR(1) items:
binop -> LT . [ THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST ]
## Transitions:
## Reductions:
-- On THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST
--   reduce production binop -> LT

State 33:
## Known stack suffix:
## expression LBRACKET
## LR(1) items:
raw_expression -> expression LBRACKET . expression RBRACKET [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## expression LBRACKET expression
## LR(1) items:
raw_expression -> expression . binop expression [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression LBRACKET expression . RBRACKET [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
## Transitions:
-- On RBRACKET shift to state 35
-- On PLUS shift to state 29
-- On MULTIPLY shift to state 30
-- On MINUS shift to state 31
-- On LT shift to state 32
-- On LBRACKET shift to state 33
-- On DOT shift to state 36
-- On AND shift to state 46
-- On binop shift to state 47
## Reductions:

State 35:
## Known stack suffix:
## expression LBRACKET expression RBRACKET
## LR(1) items:
raw_expression -> expression LBRACKET expression RBRACKET . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> expression LBRACKET expression RBRACKET

State 36:
## Known stack suffix:
## expression DOT
## LR(1) items:
raw_expression -> expression DOT . LENGTH [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression DOT . IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On LENGTH shift to state 37
-- On IDENT shift to state 38
## Reductions:

State 37:
## Known stack suffix:
## expression DOT LENGTH
## LR(1) items:
raw_expression -> expression DOT LENGTH . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> expression DOT LENGTH

State 38:
## Known stack suffix:
## expression DOT IDENT
## LR(1) items:
raw_expression -> expression DOT IDENT . LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On LPAREN shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## expression DOT IDENT LPAREN
## LR(1) items:
raw_expression -> expression DOT IDENT LPAREN . loption(separated_nonempty_list(COMMA,expression)) RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On separated_nonempty_list(COMMA,expression) shift to state 40
-- On raw_expression shift to state 26
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 41
-- On expression shift to state 43
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 40:
## Known stack suffix:
## separated_nonempty_list(COMMA,expression)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression)

State 41:
## Known stack suffix:
## expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression))
## LR(1) items:
raw_expression -> expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) . RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On RPAREN shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN
## LR(1) items:
raw_expression -> expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN

State 43:
## Known stack suffix:
## expression
## LR(1) items:
raw_expression -> expression . binop expression [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ RPAREN PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
separated_nonempty_list(COMMA,expression) -> expression . [ RPAREN ]
separated_nonempty_list(COMMA,expression) -> expression . COMMA separated_nonempty_list(COMMA,expression) [ RPAREN ]
## Transitions:
-- On PLUS shift to state 29
-- On MULTIPLY shift to state 30
-- On MINUS shift to state 31
-- On LT shift to state 32
-- On LBRACKET shift to state 33
-- On DOT shift to state 36
-- On COMMA shift to state 44
-- On AND shift to state 46
-- On binop shift to state 47
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,expression) -> expression

State 44:
## Known stack suffix:
## expression COMMA
## LR(1) items:
separated_nonempty_list(COMMA,expression) -> expression COMMA . separated_nonempty_list(COMMA,expression) [ RPAREN ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On separated_nonempty_list(COMMA,expression) shift to state 45
-- On raw_expression shift to state 26
-- On expression shift to state 43
## Reductions:

State 45:
## Known stack suffix:
## expression COMMA separated_nonempty_list(COMMA,expression)
## LR(1) items:
separated_nonempty_list(COMMA,expression) -> expression COMMA separated_nonempty_list(COMMA,expression) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,expression) -> expression COMMA separated_nonempty_list(COMMA,expression)

State 46:
## Known stack suffix:
## AND
## LR(1) items:
binop -> AND . [ THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST ]
## Transitions:
## Reductions:
-- On THIS NOT NEW LPAREN INT_CONST IDENT BOOL_CONST
--   reduce production binop -> AND

State 47:
## Known stack suffix:
## expression binop
## LR(1) items:
raw_expression -> expression binop . expression [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 48
## Reductions:

State 48:
## Known stack suffix:
## expression binop expression
## LR(1) items:
raw_expression -> expression . binop expression [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression binop expression . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On PLUS shift to state 29
-- On MULTIPLY shift to state 30
-- On MINUS shift to state 31
-- On LT shift to state 32
-- On LBRACKET shift to state 33
-- On DOT shift to state 36
-- On AND shift to state 46
-- On binop shift to state 47
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> expression binop expression
** Conflict on PLUS MULTIPLY MINUS LT LBRACKET DOT AND

State 49:
## Known stack suffix:
## NEW INTEGER LBRACKET expression
## LR(1) items:
raw_expression -> expression . binop expression [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT LENGTH [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT AND ]
raw_expression -> NEW INTEGER LBRACKET expression . RBRACKET [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On RBRACKET shift to state 50
-- On PLUS shift to state 29
-- On MULTIPLY shift to state 30
-- On MINUS shift to state 31
-- On LT shift to state 32
-- On LBRACKET shift to state 33
-- On DOT shift to state 36
-- On AND shift to state 46
-- On binop shift to state 47
## Reductions:

State 50:
## Known stack suffix:
## NEW INTEGER LBRACKET expression RBRACKET
## LR(1) items:
raw_expression -> NEW INTEGER LBRACKET expression RBRACKET . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> NEW INTEGER LBRACKET expression RBRACKET

State 51:
## Known stack suffix:
## NEW IDENT
## LR(1) items:
raw_expression -> NEW IDENT . LPAREN RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On LPAREN shift to state 52
## Reductions:

State 52:
## Known stack suffix:
## NEW IDENT LPAREN
## LR(1) items:
raw_expression -> NEW IDENT LPAREN . RPAREN [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
-- On RPAREN shift to state 53
## Reductions:

State 53:
## Known stack suffix:
## NEW IDENT LPAREN RPAREN
## LR(1) items:
raw_expression -> NEW IDENT LPAREN RPAREN . [ SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND ]
## Transitions:
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MULTIPLY MINUS LT LBRACKET DOT COMMA AND
--   reduce production raw_expression -> NEW IDENT LPAREN RPAREN
